force-app/main/default/objects/IPL_S__c/IPL_S__c.object-meta.xml
<CustomObject>
    <label>IPL(S)</label>
    <nameField>
        <label>IPL(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IPL(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>