force-app/main/default/objects/IPL_S__c/fields/Baseline_Skintel__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Skintel__c</fullName>
    <label>Baseline Skintel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>