force-app/main/default/objects/IPL_S__c/fields/Joules__c.field-meta.xml
<CustomField>
    <fullName>Joules__c</fullName>
    <label>Joules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>