force-app/main/default/objects/IPL_S__c/fields/Pulse_width__c.field-meta.xml
<CustomField>
    <fullName>Pulse_width__c</fullName>
    <label>Pulse width</label>
    <length>255</length>
    <type>Text</type>
</CustomField>